# rust_kernel

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  locked.rs  main.rs  memory.rs  serial.rs  task.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
